--- a/src/Home.html
+++ b/src/Home.html
@@ -15,6 +15,7 @@
 		<title>Home</title>
 	</head>
 	<body>
+		<!--Header-->
 		<div class="container bg-navBackground bg-cover bg-center h-screen">
 			<!--NavBar-->
 			<div class="flex justify-between">
@@ -43,7 +44,9 @@
 					Welcome to our Consignment Designer Handbag section. The perfect place
 					cheap designer handbags
 				</p>
-				<a href="" class="border border-black p-5 font-medium ml-20"
+				<a
+					href=""
+					class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
 					>SHOP NOW</a
 				>
 			</div>
