--- a/src/Home.html
+++ b/src/Home.html
@@ -21,11 +21,12 @@
 			<div class="flex justify-between">
 				<nav class="ml-10 pt-4 flex gap-5 font-custom3">
 					<a href="#" class="links links-border">Home</a>
+					<a href="#" class="links links-border">Bags</a>
 					<a href="#" class="links links-border">About Us</a>
 					<a href="#" class="links links-border">Contact</a>
 				</nav>
 				<div class="pt-4 pr-20 flex">
-					<h1 class="font-custom4 text-4xl">YOTA</h1>
+					<h1 class="font-custom4 text-5xl">YOTA</h1>
 					<p class="text-dim-colorGray font-medium">Bags</p>
 				</div>
 				<div class="pt-5 pr-12 flex gap-5">
@@ -50,6 +51,43 @@
 					>SHOP NOW</a
 				>
 			</div>
+		</div>
+
+		<!---A few words about us-->
+		<div class="container flex h-screen pt-12">
+			<div class="ml-14 mt-40">
+				<h1 class="font-custom3 text-7xl">
+					A Few <br />
+					Words<br />
+					About US
+				</h1>
+				<p class="font-custom2 w-60 mt-8 mb-14 text-gray-600">
+					We are an Bags brand from Cairo, EGYPT
+				</p>
+				<a
+					href=""
+					class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
+					>Read More</a
+				>
+			</div>
+			<div class="flex w-2/3 relative left-16">
+				<img src="/images/71qVfhILOwS._AC_SY695_.jpg" class="mr-3 w-3/5 ml-3" />
+				<img src="/images/EW_Black_2.jpg" class="w-3/6 mr-3" />
+			</div>
+		</div>
+		<!--Be Diffrent Section-->
+		<div class="container bg-BeDiffrentBg bg-cover bg-center h-screen mt-8">
+			<h1 class="font-custom3 text-7xl text-dim-colorGray relative top-20">
+				<span class="ml-[34.89%]"> Be different</span>
+				<br />
+				<span class="ml-52 relative top-64"> in your</span>
+				<span class="ml-[36%] relative top-64">own way! </span>
+			</h1>
+			<a
+				href=""
+				class="border border-white text-white p-5 font-medium ml-20 hover:bg-black hover:text-white hover:border-black translate-all duration-500 relative top-2/3"
+				>SHOP NOW</a
+			>
 		</div>
 	</body>
 </html>
