--- a/src/Home.html
+++ b/src/Home.html
@@ -14,42 +14,56 @@
 		<link href="/output.css" rel="stylesheet" />
 		<title>Home</title>
 	</head>
-	<body>
+	<body class="overflow-x-hidden">
 		<!--Header-->
-		<div class="container bg-navBackground bg-cover bg-center h-screen">
-			<!--NavBar-->
-			<div class="flex justify-between">
-				<nav class="ml-10 pt-4 flex gap-5 font-custom3">
+		<div
+			class="container bg-navBackground bg-cover bg-center min-h-screen px-4 sm:px-6 lg:px-20">
+			<!-- Navbar -->
+			<div class="flex justify-between items-center py-4">
+				<!-- Logo -->
+				<div class="flex items-center">
+					<h1 class="font-custom4 text-3xl xl:text-5xl">YOTA</h1>
+					<p class="text-dim-colorGray font-medium sm:text-sm ml-2">Bags</p>
+				</div>
+
+				<!-- Desktop Navigation -->
+				<nav class="hidden md:flex gap-5 font-custom3">
 					<a href="#" class="links links-border">Home</a>
 					<a href="#" class="links links-border">Bags</a>
 					<a href="#" class="links links-border">About Us</a>
 					<a href="#" class="links links-border">Contact</a>
 				</nav>
-				<div class="pt-4 pr-20 flex">
-					<h1 class="font-custom4 text-5xl">YOTA</h1>
-					<p class="text-dim-colorGray font-medium">Bags</p>
-				</div>
-				<div class="pt-5 pr-12 flex gap-5">
+
+				<!-- Icons & Mobile Menu Button -->
+				<div class="flex items-center gap-5">
 					<i class="fa-solid fa-search"></i>
 					<i class="fa-solid fa-shopping-cart"></i>
-					<a href="#" class="font-custom2 text-lg relative bottom-1">LOGIN</a>
+					<a href="#" class="font-custom2 text-lg">LOGIN</a>
+
+					<!-- Mobile Menu Button -->
+					<button id="menu-toggle" class="text-2xl md:hidden">
+						<i class="fa-solid fa-bars"></i>
+					</button>
 				</div>
 			</div>
-			<!--headline-->
-			<div class="mt-80 ml-14">
-				<h1 class="font-custom3 text-7xl">
+
+			<!-- Headline -->
+			<div
+				class="mt-44 sm:mt-48 md:mt-80 lg:mt-[10rem] xl:mt-72 text-center sm:text-left">
+				<h1 class="font-custom3 text-4xl sm:text-5xl md:text-7xl">
 					Original <br />
-					<span class="pl-64">Bags</span>
+					<span class="sm:pl-20 md:pl-6 lg:pl-64">Bags</span>
 				</h1>
-				<p class="font-custom2 flex-wrap w-60 text-sm relative bottom-16 ml-7">
+				<p
+					class="font-custom2 text-sm sm:text-base w-4/5 md:w-64 lg:mt-[-70px] m-auto sm:m-0">
 					Welcome to our Consignment Designer Handbag section. The perfect place
-					cheap designer handbags
+					for cheap designer handbags.
 				</p>
 				<a
 					href=""
-					class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
-					>SHOP NOW</a
-				>
+					class="border border-black px-6 py-3 font-medium mt-6 inline-block hover:bg-black hover:text-white transition-all duration-500">
+					SHOP NOW
+				</a>
 			</div>
 		</div>
 
@@ -89,18 +103,105 @@
 				>SHOP NOW</a
 			>
 		</div>
+		<!--Sho Product-->
+		<div class="container flex">
+			<img src="../images/shoulder-bag-681mut-1.jpg " class="w-96" />
+			<div>
+				<img src="../images/21326116_51338822_600.jpg" />
+				<h1>Dior</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+					tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+				</p>
+				<div>
+					<p>$135.00</p>
+					<a
+						href=""
+						class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
+						>ADD TO CART</a
+					>
+				</div>
+			</div>
+		</div>
+		<!--Trending-->
+		<div>
+			<h1>Trending now</h1>
+			<div class="container flex">
+				<div>
+					<img src="../images/photo_2025-02-07_00-16-22.jpg" class="h-96" />
+					<div>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+					</div>
+					<h1>Pinko</h1>
+					<p>$117.00</p>
+				</div>
+				<div>
+					<img src="../images/photo_2025-02-07_00-33-42.jpg" class="h-96" />
+					<div>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+					</div>
+					<h1>Pinko</h1>
+					<p>$117.00</p>
+				</div>
+				<div>
+					<img src="../images/photo_2025-02-07_00-36-55.jpg" class="h-96" />
+					<div>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+						<span class="fa fa-star"></span>
+					</div>
+					<h1>Pinko</h1>
+					<p>$117.00</p>
+				</div>
+			</div>
+		</div>
+		<!--Sections-->
+		<div class="grid grid-cols-1 gap-0 sm:grid-cols-2 lg:grid-cols-3">
+			<div class="text-center border border-gray-200 p-12">
+				<i class="fa-solid fa-percent text-xl sm:text-2xl"></i>
+				<h1 class="text-lg sm:text-xl font-bold m-2">Big discounts</h1>
+				<p class="text-wrap text-sm sm:text-base">
+					Integer euismod blandit nunc sit amet sollicitudin. Fusce quis orci
+					viverra, cursus justo lipsum dolor.
+				</p>
+			</div>
+			<div class="text-center border border-gray-200 p-12">
+				<i class="fa-solid fa-truck-fast text-xl sm:text-2xl"></i>
+				<h1 class="text-lg sm:text-xl font-bold m-2">Free shipping</h1>
+				<p class="text-wrap text-sm sm:text-base">
+					Integer euismod blandit nunc sit amet sollicitudin. Fusce quis orci
+					viverra, cursus justo lipsum dolor.
+				</p>
+			</div>
+			<div class="text-center border border-gray-200 p-12">
+				<i class="fa-regular fa-credit-card text-xl sm:text-2xl"></i>
+				<h1 class="text-lg sm:text-xl font-bold m-2">Secure payments</h1>
+				<p class="text-wrap text-sm sm:text-base">
+					Integer euismod blandit nunc sit amet sollicitudin. Fusce quis orci
+					viverra, cursus justo lipsum dolor.
+				</p>
+			</div>
+		</div>
 
 		<!--FOOTER-->
-
 		<footer class="bg-dim-colorGray">
 			<div class="mx-auto max-w-screen-xl px-4 pb-6 pt-16 sm:px-6 lg:px-8">
-				<div class="pt-4 pr-20 flex">
+				<div class="pt-4 pr-20 flex border-b border-orange-900 pb-5">
 					<h1 class="font-custom4 text-5xl">YOTA</h1>
 					<p class="text-orange-900 font-semibold">Bags</p>
 				</div>
 
-				<div
-					class="mt-6 grid grid-cols-1 gap-8 border-t border-orange-900 pt-16 md:grid-cols-4 lg:grid-cols-6">
+				<div class="mt-10 grid grid-cols-1 gap-8 md:grid-cols-4 lg:grid-cols-6">
 					<div class="text-center sm:text-left">
 						<p class="text-lg font-medium text-gray-900">About Us</p>
 
@@ -138,6 +239,7 @@
 							</li>
 						</ul>
 					</div>
+					<div></div>
 
 					<div class="text-center sm:text-left">
 						<p class="text-lg font-medium text-gray-900">Helpful Links</p>
@@ -181,6 +283,7 @@
 							</li>
 						</ul>
 					</div>
+					<div></div>
 
 					<div class="text-center sm:text-left md:col-span-4 lg:col-span-2">
 						<p class="text-lg font-medium text-gray-900">Stay in Touch</p>
@@ -203,7 +306,7 @@
 										placeholder="Enter your email" />
 
 									<button
-										class="block rounded-full bg-indigo-500 px-8 py-3 font-medium text-white transition hover:bg-indigo-600"
+										class="block rounded-full bg-orange-700 px-8 py-3 font-medium text-white transition hover:bg-orange-600"
 										type="submit">
 										Subscribe
 									</button>
@@ -215,7 +318,7 @@
 
 				<div class="mt-16 pt-6 sm:flex sm:items-center sm:justify-between">
 					<p
-						class="text-center text-sm font-custom2 text-gray-500 sm:text-left">
+						class="text-center text-base font-custom2 text-gray-500 sm:text-left">
 						Copyright &copy; 2022. All rights reserved.
 					</p>
 
@@ -225,7 +328,7 @@
 								href="#"
 								rel="noreferrer"
 								target="_blank"
-								class="text-teal-700 transition hover:text-teal-700/75">
+								class="text-orange-950 transition hover:text-orange-800">
 								<span class="sr-only">Facebook</span>
 								<svg
 									class="size-6"
@@ -245,7 +348,7 @@
 								href="#"
 								rel="noreferrer"
 								target="_blank"
-								class="text-teal-700 transition hover:text-teal-700/75">
+								class="text-orange-950 transition hover:text-orange-800">
 								<span class="sr-only">Instagram</span>
 								<svg
 									class="size-6"
@@ -265,7 +368,7 @@
 								href="#"
 								rel="noreferrer"
 								target="_blank"
-								class="text-teal-700 transition hover:text-teal-700/75">
+								class="text-orange-950 transition hover:text-orange-800">
 								<span class="sr-only">Twitter</span>
 								<svg
 									class="size-6"
@@ -274,46 +377,6 @@
 									aria-hidden="true">
 									<path
 										d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
-								</svg>
-							</a>
-						</li>
-
-						<li>
-							<a
-								href="#"
-								rel="noreferrer"
-								target="_blank"
-								class="text-teal-700 transition hover:text-teal-700/75">
-								<span class="sr-only">GitHub</span>
-								<svg
-									class="size-6"
-									fill="currentColor"
-									viewBox="0 0 24 24"
-									aria-hidden="true">
-									<path
-										fill-rule="evenodd"
-										d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
-										clip-rule="evenodd" />
-								</svg>
-							</a>
-						</li>
-
-						<li>
-							<a
-								href="#"
-								rel="noreferrer"
-								target="_blank"
-								class="text-teal-700 transition hover:text-teal-700/75">
-								<span class="sr-only">Dribbble</span>
-								<svg
-									class="size-6"
-									fill="currentColor"
-									viewBox="0 0 24 24"
-									aria-hidden="true">
-									<path
-										fill-rule="evenodd"
-										d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
-										clip-rule="evenodd" />
 								</svg>
 							</a>
 						</li>
