--- a/src/Home.html
+++ b/src/Home.html
@@ -124,44 +124,56 @@
 			</div>
 		</div>
 		<!--Trending-->
-		<div>
-			<h1>Trending now</h1>
-			<div class="container flex">
-				<div>
-					<img src="../images/photo_2025-02-07_00-16-22.jpg" class="h-96" />
-					<div>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
+		<div class="container mt-9 mb-14">
+			<h1 class="text-center font-custom3 text-5xl mb-6">Trending now</h1>
+			<div class="grid grid-cols-2 gap-5 sm:grid-cols-2 lg:grid-cols-3">
+				<div class="ml-2 sm:ml-0">
+					<img
+						src="../images/photo_2025-02-07_00-16-22.jpg"
+						class="w-[100%] h-[50%] sm:w-[95%] sm:h-[60%] lg:w-[100%] lg:h-96" />
+					<div class="m-3">
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
 					</div>
-					<h1>Pinko</h1>
-					<p>$117.00</p>
+					<h1 class="ml-5 font-bold text-lg mb-2 sm:text-xl">PINKO</h1>
+					<p class="ml-5 font-custom3 text-gray-600 text-sm sm:text-lg">
+						$117.00
+					</p>
 				</div>
-				<div>
-					<img src="../images/photo_2025-02-07_00-33-42.jpg" class="h-96" />
-					<div>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
+				<div class="ml-2 sm:ml-0">
+					<img
+						src="../images/photo_2025-02-07_00-33-42.jpg"
+						class="w-[100%] h-[50%] sm:w-[95%] sm:h-[60%] lg:w-[100%] lg:h-96" />
+					<div class="m-3">
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
 					</div>
-					<h1>Pinko</h1>
-					<p>$117.00</p>
+					<h1 class="ml-5 font-bold text-lg mb-2 sm:text-xl">DIOR</h1>
+					<p class="ml-5 font-custom3 text-gray-600 text-sm sm:text-lg">
+						$200.00
+					</p>
 				</div>
-				<div>
-					<img src="../images/photo_2025-02-07_00-36-55.jpg" class="h-96" />
-					<div>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
-						<span class="fa fa-star"></span>
+				<div class="ml-2 sm:ml-0">
+					<img
+						src="../images/photo_2025-02-07_00-36-55.jpg"
+						class="w-[100%] h-[50%] sm:w-[95%] sm:h-[60%] lg:w-[100%] lg:h-96" />
+					<div class="m-3">
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
 					</div>
-					<h1>Pinko</h1>
-					<p>$117.00</p>
+					<h1 class="ml-5 font-bold text-lg mb-2 sm:text-xl">GUSSE</h1>
+					<p class="ml-5 font-custom3 text-gray-600 text-sm sm:text-lg">
+						$100.00
+					</p>
 				</div>
 			</div>
 		</div>
