--- a/src/Home.html
+++ b/src/Home.html
@@ -104,27 +104,31 @@
 			>
 		</div>
 		<!--Sho Product-->
-		<div class="container flex">
-			<img src="../images/shoulder-bag-681mut-1.jpg " class="w-96" />
-			<div>
-				<img src="../images/21326116_51338822_600.jpg" />
-				<h1>Dior</h1>
-				<p>
+		<div class="grid grid-cols-1 sm:grid-cols-2 mt-10 mb-10">
+			<img
+				src="../images/shoulder-bag-681mut-1.jpg "
+				class="w-[100%] h-[100%] sm:w-[90%] sm:h-[100%]" />
+
+			<div class="p-20 text-left sm:ml-[10%]">
+				<img
+					src="../images/21326116_51338822_600.jpg"
+					class="w-[60%] h-[55%] sm:w-[70%] sm:h-[45%] mt-[-35%] ml-[20%] sm:mt-0 sm:ml-0" />
+				<h1 class="font-custom3 text-2xl">Dior</h1>
+				<p class="text-wrap w-[380px] text-base">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
 					tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
 				</p>
-				<div>
-					<p>$135.00</p>
-					<a
-						href=""
-						class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
-						>ADD TO CART</a
-					>
-				</div>
+				<p class="mt-3 font-custom3 text-gray-600 text-sm sm:text-base">
+					$135.00
+				</p>
+				<p
+					class="border border-black font-medium hover:bg-black hover:text-white translate-all duration-500 text-center p-2 w-36 cursor-pointer mt-8 ml-[30%] sm:ml-[20%]">
+					ADD TO CART
+				</p>
 			</div>
 		</div>
 		<!--Trending-->
-		<div class="container mt-9 mb-14">
+		<div class="container mt-5 mb-14">
 			<h1 class="text-center font-custom3 text-5xl mb-6">Trending now</h1>
 			<div class="grid grid-cols-2 gap-5 sm:grid-cols-2 lg:grid-cols-3">
 				<div class="ml-2 sm:ml-0">
