--- a/src/Home.html
+++ b/src/Home.html
@@ -68,42 +68,19 @@
 		</div>
 
 		<!---A few words about us-->
-		<div class="container flex h-screen pt-12">
-			<div class="ml-14 mt-40">
-				<h1 class="font-custom3 text-7xl">
-					A Few <br />
-					Words<br />
-					About US
-				</h1>
-				<p class="font-custom2 w-60 mt-8 mb-14 text-gray-600">
-					We are an Bags brand from Cairo, EGYPT
+		<div class="grid grid-cols-1 sm:grid-cols-2">
+			<div class="text-center">
+				<h1 class="">A Few Words About US</h1>
+				<p class="text-gray-600">We are an Bags brand from Cairo, EGYPT</p>
+				<p
+					class="border border-black font-medium hover:bg-black hover:text-white translate-all duration-500 text-center p-2 w-36 cursor-pointer">
+					Read More
 				</p>
-				<a
-					href=""
-					class="border border-black p-5 font-medium ml-20 hover:bg-black hover:text-white translate-all duration-500"
-					>Read More</a
-				>
 			</div>
-			<div class="flex w-2/3 relative left-16">
-				<img src="/images/71qVfhILOwS._AC_SY695_.jpg" class="mr-3 w-3/5 ml-3" />
-				<img src="/images/EW_Black_2.jpg" class="w-3/6 mr-3" />
-			</div>
+			<img src="/images/71qVfhILOwS._AC_SY695_.jpg" class="sm:w-[80%]" />
 		</div>
-		<!--Be Diffrent Section-->
-		<div class="container bg-BeDiffrentBg bg-cover bg-center h-screen mt-8">
-			<h1 class="font-custom3 text-7xl text-dim-colorGray relative top-[45px]">
-				<span class="ml-[34.89%]"> Be different</span>
-				<br />
-				<span class="ml-52 relative top-64"> in your</span>
-				<span class="ml-[36%] relative top-64">own way! </span>
-			</h1>
-			<a
-				href=""
-				class="border border-white text-white p-5 font-medium ml-20 hover:bg-black hover:text-white hover:border-black translate-all duration-500 relative top-2/3"
-				>SHOP NOW</a
-			>
-		</div>
-		<!--Sho Product-->
+
+		<!--Show Product-->
 		<div class="grid grid-cols-1 sm:grid-cols-2 mt-10 mb-10">
 			<img
 				src="../images/shoulder-bag-681mut-1.jpg "
